2007-05-08  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by darin
        
        <rdar://problem/5017613> Style changes don't effect fully selected ToDo content

        Demonstrates the bug:
        * editing/style/5017613-1-expected.checksum: Added.
        * editing/style/5017613-1-expected.png: Added.
        * editing/style/5017613-1-expected.txt: Added.
        * editing/style/5017613-1.html: Added.
        
        Tests to make sure that a plaintext-only region
        will only be styled if it is fully selected:
        * editing/style/5017613-2-expected.checksum: Added.
        * editing/style/5017613-2-expected.png: Added.
        * editing/style/5017613-2-expected.txt: Added.
        * editing/style/5017613-2.html: Added.

2007-05-09  Adele Peterson  <adele@apple.com>

        Reviewed by Hyatt.

        Updated results for <rdar://problem/5113578> REGRESSION: textfields that set the height but not the font 
        look different from IE & FF because the font is small

        * fast/block/float/032-expected.txt:
        * fast/forms/input-text-word-wrap-expected.checksum:
        * fast/forms/input-text-word-wrap-expected.png:
        * fast/forms/input-text-word-wrap-expected.txt:

2007-05-09  Darin Adler  <darin@apple.com>

        - checked in a file that was accidentally left out of the last check-in

        * fast/js/cyclic-prototypes-expected.txt: Added.

2007-05-09  Eric Seidel  <eric@webkit.org>

        Reviewed by mjs.
        
        http://bugs.webkit.org/show_bug.cgi?id=6985
        Cyclic __proto__ values cause webkit to hang

        * fast/js/cyclic-prototypes-expected.txt: Added.
        * fast/js/cyclic-prototypes.html: Added.
        * fast/js/resources/cyclic-prototypes.js: Added.

2007-05-08  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Darin Adler.

        Added test to verify that you get back the same JS/ObjC wrapper when
        you access the same object twice.
